RESOLVED FIXED221702
REGRESSION (r272628): [macOS] TestWebKitAPI.WKWebView.SnapshotImageError is consistently failing
https://bugs.webkit.org/show_bug.cgi?id=221702
Summary REGRESSION (r272628): [macOS] TestWebKitAPI.WKWebView.SnapshotImageError is c...
Ryan Haddad
Reported 2021-02-10 11:28:41 PST
TestWebKitAPI.WKWebView.SnapshotImageError is consistently failing on macOS after https://trac.webkit.org/changeset/272628/webkit landed TestWebKitAPI.WKWebView.SnapshotImageError /Volumes/Data/slave/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewSnapshot.mm:76 Value of: !(snapshotImage) Actual: false Expected: true /Volumes/Data/slave/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewSnapshot.mm:77 Expected equality of these values: @"WKErrorDomain" Which is: "WKErrorDomain" error.domain Which is: "" https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKWebView.SnapshotImageError
Attachments
Patch (2.08 KB, patch)
2021-02-10 11:38 PST, Alex Christensen
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-10 11:29:02 PST
Alex Christensen
Comment 2 2021-02-10 11:38:17 PST
Alex Christensen
Comment 3 2021-02-10 11:41:16 PST
Note You need to log in before you can comment on or make changes to this bug.