REGRESSION (r272628): [macOS] TestWebKitAPI.WKWebView.SnapshotImageError is consistently failing https://bugs.webkit.org/show_bug.cgi?id=221702

I got a little carried away with my error reduction.  This one needs an error.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView takeSnapshotWithConfiguration:completionHandler:]):



Canonical link: https://commits.webkit.org/233925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272666 268f45cc-cd09-0410-ab3c-d52691b4dbfc